Remove code smells. Add cue to signal filters active. Fixed a layout bug. Fixed a logic bug.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -11,7 +11,7 @@ div, header, nav, footer, main {
 
 body .container, main  {
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100vh;
 }
 
@@ -26,7 +26,7 @@ body .container, main  {
 }
 
 .header-pane .ui.avatar.image {
-  margin-right: 0.8em;
+  margin-right: 0.4em;
 }
 
 .navigation-pane {
@@ -72,7 +72,6 @@ body .container, main  {
 
 .content-pane {
   width: 100vw;
-  /*flex-basis: calc(100vh - (3em + 3em + 4em + 2em));*/
   flex-grow: 1;
   flex-shrink: 1;
   overflow: auto;
